--- a/oncoFinder2/templates/report/gsk_prj2_4d_high.html
+++ b/oncoFinder2/templates/report/gsk_prj2_4d_high.html
@@ -981,21 +981,21 @@ $(function() {
 	 	 
 	     
 	   //GENES
-	 	{%for perm in report.get_gene_permutations%}
+	 	//{%for perm in report.get_gene_permutations%}
 	 	
-	 	$("#venn_boot_gene_{{perm.strip}}").click(function(){
-	 		drawVenn({{report.id}},
-	 				'venn_gene-{{perm.strip}}-up',
-	 				'{{perm.strip}}',	 
-	 				false, 'up', 'venn_gene_dinamic_{{perm.strip}}', 'genes', categories='{{report.get_all_gene_groups_norm_as_list}}');
-	 		drawVenn({{report.id}},
-	 				'venn_gene-{{perm.strip}}-down',
-	 				'{{perm.strip}}',			
-	 				false, 'down', 'venn_gene_dinamic_{{perm.strip}}', 'genes', categories='{{report.get_all_gene_groups_norm_as_list}}');
+	 	//$("#venn_boot_gene_{{perm.strip}}").click(function(){
+	 	//	drawVenn({{report.id}},
+	 	//			'venn_gene-{{perm.strip}}-up',
+	 	//			'{{perm.strip}}',	 
+	 	//			false, 'up', 'venn_gene_dinamic_{{perm.strip}}', 'genes', categories='{{report.get_all_gene_groups_norm_as_list}}');
+	 	//	drawVenn({{report.id}},
+	 	//			'venn_gene-{{perm.strip}}-down',
+	 	//			'{{perm.strip}}',			
+	 	//			false, 'down', 'venn_gene_dinamic_{{perm.strip}}', 'genes', categories='{{report.get_all_gene_groups_norm_as_list}}');
 	 		
-	 	});
+	 	//});
 	 	
-	 	{%endfor%}
+	 	//{%endfor%}
 		
 	});
 	
@@ -1056,20 +1056,20 @@ $("#btn_show_path").click(function(){
 	
 
 	
-	{%for perm in report.get_path_permutations%}
+	//{%for perm in report.get_path_permutations%}
 	
-	$("#venn_boot_path_{{perm.strip}}").click(function(){
+	//$("#venn_boot_path_{{perm.strip}}").click(function(){
 	
-	drawVenn({{report.id}},
-		'venn_path-{{perm.strip}}-up',
-		'{{perm.strip}}',
-		false, 'up', 'venn_path_dinamic_{{perm.strip}}', 'pathways', '{{report.organism}}');
-	drawVenn({{report.id}},
-			'venn_path-{{perm.strip}}-down',
-			'{{perm.strip}}',
-			false, 'down', 'venn_path_dinamic_{{perm.strip}}', 'pathways', '{{report.organism}}');
-	});
-    {%endfor%}
+	//drawVenn({{report.id}},
+	//	'venn_path-{{perm.strip}}-up',
+	//	'{{perm.strip}}',
+	//	false, 'up', 'venn_path_dinamic_{{perm.strip}}', 'pathways', '{{report.organism}}');
+	//drawVenn({{report.id}},
+	//		'venn_path-{{perm.strip}}-down',
+	//		'{{perm.strip}}',
+	//		false, 'down', 'venn_path_dinamic_{{perm.strip}}', 'pathways', '{{report.organism}}');
+	//});
+    //{%endfor%}
     
 /////////////////// Transcription Factor
 $("#btn_show_tf").click(function(){
@@ -1198,7 +1198,7 @@ $("#btn_show_tf").click(function(){
             "order": [[ 1, "desc" ]],
             "info":     false,
             "dom": 'Bfrtip',
-            "scrollX": true,
+            "scrollX": false,
             "buttons": [
                        {extend: 'csv', title: 'tbl-mms'},
                        {extend: 'print', title: 'tbl-mms'}
@@ -1223,7 +1223,7 @@ $("#btn_show_tf").click(function(){
             "order": [[ 1, "desc" ]],
             "info":     false,
             "dom": 'Bfrtip',
-            "scrollX": true,
+            "scrollX": false,
             "buttons": [
                        {extend: 'csv', title: 'tbl-mms'},
                        {extend: 'print', title: 'tbl-mms'}
@@ -1290,7 +1290,7 @@ $('#tbl-mhe').on( 'draw.dt', function () {
             "order": [[ 1, "desc" ]],
             "info":     false,
             "dom": 'Bfrtip',
-            "scrollX": true,
+            "scrollX": false,
             "buttons": [
                        {extend: 'csv', title: 'tbl-mms'},
                        {extend: 'print', title: 'tbl-mms'}
@@ -1313,7 +1313,7 @@ $('#tbl-mhe').on( 'draw.dt', function () {
             "order": [[ 1, "desc" ]],
             "info":     false,
             "dom": 'Bfrtip',
-            "scrollX": true,
+            "scrollX": false,
             "bAutoWidth": false,
             "buttons": [
                        {extend: 'csv', title: 'tbl-mms'},
@@ -1337,7 +1337,7 @@ $('#tbl-mhe').on( 'draw.dt', function () {
             "order": [[ 1, "desc" ]],
             "info":     false,
             "dom": 'Bfrtip',
-            "scrollX": true,
+            "scrollX": false,
             "buttons": [
                        {extend: 'csv', title: 'tbl-mms'},
                        {extend: 'print', title: 'tbl-mms'}
@@ -1360,7 +1360,7 @@ $('#tbl-mhe').on( 'draw.dt', function () {
             "order": [[ 1, "desc" ]],
             "info":     false,
             "dom": 'Bfrtip',
-            "scrollX": true,
+            "scrollX": false,
             "buttons": [
                        {extend: 'csv', title: 'tbl-mms'},
                        {extend: 'print', title: 'tbl-mms'}
@@ -1383,7 +1383,7 @@ $('#tbl-mhe').on( 'draw.dt', function () {
             "order": [[ 1, "desc" ]],
             "info":     false,
             "dom": 'Bfrtip',
-            "scrollX": true,
+            "scrollX": false,
             "buttons": [
                        {extend: 'csv', title: 'tbl-mms'},
                        {extend: 'print', title: 'tbl-mms'}
@@ -1406,7 +1406,7 @@ $('#tbl-mhe').on( 'draw.dt', function () {
             "order": [[ 1, "desc" ]],
             "info":     false,
             "dom": 'Bfrtip',
-            "scrollX": true,
+            "scrollX": false,
             "buttons": [
                        {extend: 'csv', title: 'tbl-mms'},
                        {extend: 'print', title: 'tbl-mms'}
@@ -1431,7 +1431,7 @@ var top5_fc_ex = $("#tbl-top5_fc_ex").DataTable( {
             "order": [[ 1, "desc" ]],
             "info":     false,
             "dom": 'Bfrtip',
-            "scrollX": true,
+            "scrollX": false,
             "buttons": [
                        {extend: 'csv', title: 'tbl-mms'},
                        {extend: 'print', title: 'tbl-mms'}
@@ -1454,7 +1454,7 @@ var top5_fc_ex = $("#tbl-top5_fc_ex").DataTable( {
             "order": [[ 1, "desc" ]],
             "info":     false,
             "dom": 'Bfrtip',
-            "scrollX": true,
+            "scrollX": false,
             "buttons": [
                        {extend: 'csv', title: 'tbl-mms'},
                        {extend: 'print', title: 'tbl-mms'}
@@ -1477,7 +1477,7 @@ var top5_fc_ex = $("#tbl-top5_fc_ex").DataTable( {
             "order": [[ 1, "desc" ]],
             "info":     false,
             "dom": 'Bfrtip',
-            "scrollX": true,
+            "scrollX": false,
             "buttons": [
                        {extend: 'csv', title: 'tbl-mms'},
                        {extend: 'print', title: 'tbl-mms'}
@@ -1500,7 +1500,7 @@ var top5_fc_ex = $("#tbl-top5_fc_ex").DataTable( {
             "order": [[ 1, "desc" ]],
             "info":     false,
             "dom": 'Bfrtip',
-            "scrollX": true,
+            "scrollX": false,
             "buttons": [
                        {extend: 'csv', title: 'tbl-mms'},
                        {extend: 'print', title: 'tbl-mms'}
@@ -1523,7 +1523,7 @@ var top5_fc_ex = $("#tbl-top5_fc_ex").DataTable( {
             "order": [[ 1, "desc" ]],
             "info":     false,
             "dom": 'Bfrtip',
-            "scrollX": true,
+            "scrollX": false,
             "buttons": [
                        {extend: 'csv', title: 'tbl-mms'},
                        {extend: 'print', title: 'tbl-mms'}
@@ -1546,7 +1546,7 @@ var top5_fc_ex = $("#tbl-top5_fc_ex").DataTable( {
             "order": [[ 1, "desc" ]],
             "info":     false,
             "dom": 'Bfrtip',
-            "scrollX": true,
+            "scrollX": false,
             "buttons": [
                        {extend: 'csv', title: 'tbl-mms'},
                        {extend: 'print', title: 'tbl-mms'}
