--- a/oncoFinder2/templates/report/report_detail_abovebeyond.html
+++ b/oncoFinder2/templates/report/report_detail_abovebeyond.html
@@ -425,7 +425,7 @@
      {%if forloop.counter == 1 %}
      <div role="tabpanel" class="tab-pane fade in active" id="{{group.get_slug}}_ds_tab">
      {%else%}
-     <div role="tabpanel" class="tab-pane fade " id="{{group.get_slug}}_ds_tab">
+     <div role="tabpanel" class="tab-pane fade " id="{{group.get_slug}}_ds_tab" style='overflow-x: auto;'>
      {%endif%}
       
         
