--- a/oncoFinder2/templates/report/gsk_prj2_1d.html
+++ b/oncoFinder2/templates/report/gsk_prj2_1d.html
@@ -1229,7 +1229,7 @@ $("#btn_show_tf").click(function(){
             "order": [[ 1, "desc" ]],
             "info":     false,
             "dom": 'Bfrtip',
-            "scrollX": true,
+            "scrollX": false,
             "buttons": [
                        {extend: 'csv', title: 'tbl-mms'},
                        {extend: 'print', title: 'tbl-mms'}
@@ -1252,7 +1252,7 @@ $("#btn_show_tf").click(function(){
             "order": [[ 1, "desc" ]],
             "info":     false,
             "dom": 'Bfrtip',
-            "scrollX": true,
+            "scrollX": false,
             "buttons": [
                        {extend: 'csv', title: 'tbl-mms'},
                        {extend: 'print', title: 'tbl-mms'}
@@ -1275,7 +1275,7 @@ $("#btn_show_tf").click(function(){
             "order": [[ 1, "desc" ]],
             "info":     false,
             "dom": 'Bfrtip',
-            "scrollX": true,
+            "scrollX": false,
             "buttons": [
                        {extend: 'csv', title: 'tbl-mms'},
                        {extend: 'print', title: 'tbl-mms'}
@@ -1298,7 +1298,7 @@ $("#btn_show_tf").click(function(){
             "order": [[ 1, "desc" ]],
             "info":     false,
             "dom": 'Bfrtip',
-            "scrollX": true,
+            "scrollX": false,
             "buttons": [
                        {extend: 'csv', title: 'tbl-mms'},
                        {extend: 'print', title: 'tbl-mms'}
@@ -1321,7 +1321,7 @@ $("#btn_show_tf").click(function(){
             "order": [[ 1, "desc" ]],
             "info":     false,
             "dom": 'Bfrtip',
-            "scrollX": true,
+            "scrollX": false,
             "buttons": [
                        {extend: 'csv', title: 'tbl-mms'},
                        {extend: 'print', title: 'tbl-mms'}
