add pics to A&B report

--- a/oncoFinder2/templates/report/report_detail_abovebeyond.html
+++ b/oncoFinder2/templates/report/report_detail_abovebeyond.html
@@ -91,7 +91,11 @@
 </center>
 
 <div id='hide_genes' style='display:none;'> <!-- Div to hide and load on button click -->
-          
+<center>
+<img src='/media/report-portal/above-and-beyond/gene2.png' />
+<br/>
+<img src='/media/report-portal/above-and-beyond/gene1.png' />
+</center>          
    <!-- GENE Nav tabs -->      
    <ul class="nav nav-tabs" role="tablist">
      {%for group in report.genegroup_set.all%}
