add pics to A&B report 1

--- a/oncoFinder2/templates/report/report_detail_abovebeyond.html
+++ b/oncoFinder2/templates/report/report_detail_abovebeyond.html
@@ -92,9 +92,11 @@
 
 <div id='hide_genes' style='display:none;'> <!-- Div to hide and load on button click -->
 <center>
-<img src='/media/report-portal/above-and-beyond/gene2.png' />
-<br/>
 <img src='/media/report-portal/above-and-beyond/gene1.png' />
+<h4>PCA plot with outlier</h4>
+<br/>
+<img src='/media/report-portal/above-and-beyond/gene2.png' />
+<h4>PCA plot without outlier</h4>
 </center>          
    <!-- GENE Nav tabs -->      
    <ul class="nav nav-tabs" role="tablist">
