--- a/oncoFinder2/templates/report/gsk_prj2_4d_medium_low.html
+++ b/oncoFinder2/templates/report/gsk_prj2_4d_medium_low.html
@@ -522,22 +522,22 @@
        </li>
        <li role="presentation" >
          <a href="#top5_ec_wh_tab" aria-controls="home1" role="tab" data-toggle="tab" >
-           Top 5 FC-based EC model(whole dataset)
+           Top 5 FC-based models(EC dataset)
          </a>
        </li>
        <li role="presentation" >
          <a href="#probe_ec_wh_tab" aria-controls="home1" role="tab" data-toggle="tab" >
-           Probe importance for top EC(whole dataset)
+           Probe importance for top FC model (EC dataset)
          </a>
        </li>
        <li role="presentation" >
          <a href="#top5_sm_wh_tab" aria-controls="home1" role="tab" data-toggle="tab" >
-           Top 5 FC-based SM models(whole dataset)
+           Top 5 FC-based models(SM dataset)
          </a>
        </li>
        <li role="presentation" >
          <a href="#probe_sm_wh_tab" aria-controls="home1" role="tab" data-toggle="tab" >
-           Probe importance for top SM(whole dataset)
+           Probe importance for top FC model (SM dataset)
          </a>
        </li>
        <li role="presentation" >
@@ -547,27 +547,27 @@
        </li>
        <li role="presentation" >
          <a href="#probe_fc_ex_tab" aria-controls="home1" role="tab" data-toggle="tab" >
-           Probe importance for top FC(extended dataset)
+           Probe importance for top FC model (extended whole dataset)
          </a>
        </li>
        <li role="presentation" >
          <a href="#top5_ec_ex_tab" aria-controls="home1" role="tab" data-toggle="tab" >
-           Top 5 FC-based EC model(extended dataset)
+           Top 5 FC-based models(extended EC dataset)
          </a>
        </li>
        <li role="presentation" >
          <a href="#probe_ec_ex_tab" aria-controls="home1" role="tab" data-toggle="tab" >
-           Probe importance for top EC(extended dataset)
+           Probe importance for top FC model (extended EC dataset)
          </a>
        </li>
        <li role="presentation" >
          <a href="#top5_sm_ex_tab" aria-controls="home1" role="tab" data-toggle="tab" >
-           Top 5 FC-based SM model(extended dataset)
+           Top 5 FC-based models(extended SM dataset)
          </a>
        </li>
        <li role="presentation" >
          <a href="#probe_sm_ex_tab" aria-controls="home1" role="tab" data-toggle="tab" >
-           Probe importance for top SM(extended dataset)
+           Probe importance for top FC model (extended SM dataset)
          </a>
        </li>
      
@@ -576,13 +576,12 @@
    <div class="tab-content">
     
      
-     <div role="tabpanel" class="tab-pane fade in active" id="top5_fc_wh_tab">
-     
-             
+     <div role="tabpanel" class="tab-pane fade in active" id="top5_fc_wh_tab" style='overflow-x: auto;'>
+        
        <h4>Table <span class='tbl_num'></span>Top 5 FC-based models(whole dataset) </h4>
        <table id="tbl-top5_fc_wh" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
-          <tr>
+          <tr >
            <th>#</th>
            <th>num_features</th>
            <th>accuracy</th>
@@ -602,7 +601,7 @@
      <div role="tabpanel" class="tab-pane fade " id="probe_fc_wh_tab">
      
              
-       <h4>Table <span class='tbl_num'></span>Probe importance for top FC(whole dataset) </h4>
+       <h4>Table <span class='tbl_num'></span>Probe importance for top FC model(whole dataset) </h4>
        <table id="tbl-probe_fc_wh" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
           <tr>
@@ -620,7 +619,7 @@
      <div role="tabpanel" class="tab-pane fade " id="top5_ec_wh_tab">
      
              
-       <h4>Table <span class='tbl_num'></span>Top 5 FC-based EC model(whole dataset) </h4>
+       <h4>Table <span class='tbl_num'></span>Top 5 FC-based model(EC dataset) </h4>
        <table id="tbl-top5_ec_wh" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
           <tr>
@@ -643,7 +642,7 @@
      <div role="tabpanel" class="tab-pane fade " id="probe_ec_wh_tab">
      
              
-       <h4>Table <span class='tbl_num'></span>Probe importance for top EC(whole dataset) </h4>
+       <h4>Table <span class='tbl_num'></span>Probe importance for top FC model (EC dataset) </h4>
        <table id="tbl-probe_ec_wh" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
           <tr>
@@ -661,7 +660,7 @@
 <div role="tabpanel" class="tab-pane fade " id="top5_sm_wh_tab">
      
              
-       <h4>Table <span class='tbl_num'></span>Top 5 FC-based SM model(whole dataset) </h4>
+       <h4>Table <span class='tbl_num'></span>Top 5 FC-based model(SM dataset) </h4>
        <table id="tbl-top5_sm_wh" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
           <tr>
@@ -684,7 +683,7 @@
      <div role="tabpanel" class="tab-pane fade " id="probe_sm_wh_tab">
      
              
-       <h4>Table <span class='tbl_num'></span>Probe importance for top SM(whole dataset) </h4>
+       <h4>Table <span class='tbl_num'></span>Probe importance for top FC model (SM dataset) </h4>
        <table id="tbl-probe_sm_wh" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
           <tr>
@@ -702,7 +701,7 @@
 <div role="tabpanel" class="tab-pane fade " id="top5_fc_ex_tab">
      
              
-       <h4>Table <span class='tbl_num'></span>Top 5 FC-based models(extended dataset) </h4>
+       <h4>Table <span class='tbl_num'></span>Top 5 FC-based models(extended whole dataset) </h4>
        <table id="tbl-top5_fc_ex" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
           <tr>
@@ -725,7 +724,7 @@
      <div role="tabpanel" class="tab-pane fade " id="probe_fc_ex_tab">
      
              
-       <h4>Table <span class='tbl_num'></span>Probe importance for top FC(extended dataset) </h4>
+       <h4>Table <span class='tbl_num'></span>Probe importance for top FC model (extended whole dataset) </h4>
        <table id="tbl-probe_fc_ex" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
           <tr>
@@ -743,7 +742,7 @@
 <div role="tabpanel" class="tab-pane fade " id="top5_ec_ex_tab">
      
              
-       <h4>Table <span class='tbl_num'></span>Top 5 FC-based EC model(extended dataset) </h4>
+       <h4>Table <span class='tbl_num'></span>Top 5 FC-based model(extended EC dataset) </h4>
        <table id="tbl-top5_ec_ex" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
           <tr>
@@ -766,7 +765,7 @@
      <div role="tabpanel" class="tab-pane fade " id="probe_ec_ex_tab">
      
              
-       <h4>Table <span class='tbl_num'></span>Probe importance for top EC(extended dataset) </h4>
+       <h4>Table <span class='tbl_num'></span>Probe importance for top FC model (extended EC dataset) </h4>
        <table id="tbl-probe_ec_ex" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
           <tr>
@@ -784,7 +783,7 @@
 <div role="tabpanel" class="tab-pane fade " id="top5_sm_ex_tab">
      
              
-       <h4>Table <span class='tbl_num'></span>Top 5 FC-based SM model(extended dataset) </h4>
+       <h4>Table <span class='tbl_num'></span>Top 5 FC-based model(extended SM dataset) </h4>
        <table id="tbl-top5_sm_ex" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
           <tr>
@@ -807,7 +806,7 @@
      <div role="tabpanel" class="tab-pane fade " id="probe_sm_ex_tab">
      
              
-       <h4>Table <span class='tbl_num'></span>Probe importance for top SM(extended dataset) </h4>
+       <h4>Table <span class='tbl_num'></span>Probe importance for top FC model (extended SM dataset) </h4>
        <table id="tbl-probe_sm_ex" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
           <tr>
@@ -823,8 +822,23 @@
      </div> <!-- end of tabpanel div -->   
    </div> <!--  end of tab-content div -->
    
-   
-   
+<!-- VENN FOR DEEP LEARNING -->   
+<hr/>   
+   <table style='text-align:center;'>
+      <tr>
+       <td>
+       <div id="venn_gene-whole" style="min-width: 450px; height: 400px; max-width: 450px; margin: 0 auto">Loading diagram...</div> 
+       Whole Dataset
+       </td>
+       <td>
+       <div id="venn_gene-extended" style="min-width: 450px; height: 400px; max-width: 450px; margin: 0 auto">Loading diagram...</div> 
+       Extended Dataset
+       </td>
+      </tr>
+    </table>        
+   <br/>
+  <div id="venn_gene_dinamic_deep" class="" style="max-width:1000px;"></div> <!--  div to place dinamic tables from Venn clicks -->
+  
 
 </div> <!--  end of hide div -->
 <!-- End of TF -->
@@ -1603,6 +1617,16 @@ var top5_fc_ex = $("#tbl-top5_fc_ex").DataTable( {
             	            },        	      
             
         },"deferRender": true });
+        
+        
+        drawVenn({{report.id}},
+              	'venn_gene-whole',
+            	'WholevsECvsSM',
+            	true, 'up', 'venn_gene_dinamic_deep', 'deeplearning', '{{report.organism}}');
+        drawVenn({{report.id}},
+            		'venn_gene-extended',
+            		'WholevsECvsSM',
+            		false, 'up', 'venn_gene_dinamic_deep', 'deeplearning', '{{report.organism}}');
         
  /* METABOLIC PATHs
   drawPathwayTable({{report.id}},
